# vulkan-craft

./: .gitignore  .gitmodules  Buffer.hpp  CMakeLists.txt  CommandPool.hpp  DescriptorPool.hpp  GameWindow.hpp  Image.hpp  Input.hpp  Json.hpp  ModelRenderer.hpp  Mouse.hpp  README.md  RenderBuffer.hpp  RenderSystem.hpp  ResourceManager.hpp  ResourcePack.hpp  Texture.hpp  VertexBuilder.hpp  Window.hpp  WindowGLFW.hpp  console.hpp  gui.cpp  gui.hpp  main.cpp  mem_alloc.cpp  mem_alloc.hpp  span.hpp
assets/: default.frag  default.vert
assets/shaders/: default.frag
client/: AppPlatform.hpp
math/: vec3.hpp
renderer/: BlockTessellator.hpp  Material.hpp  ModelBox.hpp  ModelGeometry.hpp  ModelPart.hpp  ModelPartBox.hpp  ModelTransform.hpp  RenderBuffer.hpp  RenderContext.cpp  RenderContext.hpp  RenderMaterial.hpp  RenderSystem.hpp  Tessellator.hpp  TexturedQuad.hpp
renderer/entity/: AgentRenderer.hpp
renderer/texture/: NativeImage.hpp  Texture.hpp  TextureAtlas.hpp  TextureManager.hpp
resources/: ResourceManager.hpp  ResourcePack.hpp
src/client/: AppPlatform.hpp  Clock.hpp  Input.hpp  Keyboard.hpp  Mouse.hpp
src/client/gui/: gui.cpp  gui.hpp
src/client/renderer/: BlockTessellator.hpp  Colormap.hpp  PositionTextureVertex.hpp  RenderBuffer.hpp  RenderContext.cpp  RenderContext.hpp  RenderSystem.cpp  RenderSystem.hpp  RotData.hpp  Tessellator.hpp  TextureUVCoordinateSet.hpp
src/client/renderer/entity/: AgentRenderer.hpp  EntityRenderer.hpp
src/client/renderer/material/: Material.hpp  MaterialManager.hpp
src/client/renderer/model/: ModelBoneFormat.hpp  ModelBox.hpp  ModelCubeFormat.hpp  ModelFormat.hpp  ModelRenderer.hpp  ParsedGeometryBoneElement.hpp  ParsedGeometryBoneNode.hpp  ParsedModelGeometry.hpp
src/client/renderer/texture/: NativeImage.hpp  TextureAtlas.hpp  TextureManager.hpp
src/client/util/: Buffer.hpp  CommandPool.hpp  DescriptorPool.hpp  Handle.hpp  MemoryAllocator.cpp
src/resources/: ResourceManager.hpp  ResourcePack.hpp
src/util/: ConnectionBit.hpp  FlammableBit.hpp  ResourceLocation.hpp
src/util/math/: AABB.hpp  Rect2D.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/world/tile/: AcaciaDoorTile.cpp  AcaciaDoorTile.hpp  AcaciaFenceGateTile.hpp  AcaciaPressurePlateTile.hpp  AcaciaStandingSignTile.cpp  AcaciaStandingSignTile.hpp  ActivatorRailTile.cpp  AndesiteStairsTile.cpp  AnvilTile.hpp  BambooSaplingTile.hpp  BarrelTile.hpp  BarrierTile.hpp  BedTile.cpp  BedTile.hpp  BedrockTile.cpp  BirchButtonTile.cpp  BirchDoorTile.hpp  BirchFenceGateTile.cpp  BirchStairsTile.cpp  BirchTrapdoorTile.hpp  BirchWallSignTile.cpp  BirchWallSignTile.hpp  BlackGlazedTerracottaTile.hpp  BlueGlazedTerracottaTile.hpp  BlueIceTile.cpp  BookshelfTile.cpp  BorderBlockTile.hpp  BrickStairsTile.cpp  BrownGlazedTerracottaTile.hpp  BrownMushroomBlockTile.hpp  BrownMushroomTile.cpp  BrownMushroomTile.hpp  BubbleColumnTile.cpp  CactusTile.cpp  CactusTile.hpp  CampfireTile.hpp  CarpetTile.cpp  CarrotsTile.cpp  CarrotsTile.hpp  CarvedPumpkinTile.cpp  (+313 more)
util/math/: TilePos.hpp
world/tile/: AcaciaButtonTile.cpp  AcaciaButtonTile.hpp  AcaciaFenceGateTile.cpp  AcaciaPressurePlateTile.cpp  AcaciaStairsTile.cpp  AcaciaStairsTile.hpp  AcaciaTrapdoorTile.cpp  AcaciaTrapdoorTile.hpp  AcaciaWallSignTile.cpp  AcaciaWallSignTile.hpp  ActivatorRailTile.hpp  AirTile.cpp  AirTile.hpp  AllowTile.cpp  AllowTile.hpp  AndesiteStairsTile.hpp  AnvilTile.cpp  BambooSaplingTile.cpp  BambooTile.cpp  BambooTile.hpp  BarrelTile.cpp  BarrierTile.cpp  BeaconTile.cpp  BeaconTile.hpp  BedrockTile.hpp  BeetrootTile.cpp  BeetrootTile.hpp  BellTile.cpp  BellTile.hpp  BirchButtonTile.hpp  BirchDoorTile.cpp  BirchFenceGateTile.hpp  BirchPressurePlateTile.cpp  BirchPressurePlateTile.hpp  BirchStairsTile.hpp  BirchStandingSignTile.cpp  BirchStandingSignTile.hpp  BirchTrapdoorTile.cpp  BlackGlazedTerracottaTile.cpp  BlastFurnaceTile.cpp  (+295 more)
