cmake_minimum_required(VERSION 3.16)
project(vcraft)

set(CMAKE_CXX_STANDARD 20)

include_directories(.)
include_directories(imgui)

function(add_shaders TARGET)
    set(SPIRV_BINARY_FILES)
    foreach(SOURCE_FILE ${ARGN})
        set(SPIRV "${SOURCE_FILE}.spv")
        add_custom_command(
                OUTPUT ${SPIRV}
#                COMMAND ${CMAKE_COMMAND} -E make_directory "${PROJECT_BINARY_DIR}/shaders/"
                COMMAND glslc ${SOURCE_FILE} -o ${SPIRV}
                DEPENDS ${SOURCE_FILE}
                WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
        list(APPEND SPIRV_BINARY_FILES ${SPIRV})
    endforeach(SOURCE_FILE)

    add_custom_target(${TARGET} DEPENDS ${SPIRV_BINARY_FILES})
endfunction()

add_shaders(shaders
        assets/shaders/default.frag
        assets/shaders/default.vert
)

add_library(imgui STATIC
    imgui/imconfig.h
    imgui/imgui.h
    imgui/imgui.cpp
    imgui/imgui_demo.cpp
    imgui/imgui_draw.cpp
    imgui/imgui_internal.h
    imgui/imgui_widgets.cpp
    imgui/imstb_rectpack.h
    imgui/imstb_textedit.h
    imgui/imstb_truetype.h)

add_executable(vcraft
    main.cpp
    stb_image.hpp
    renderer/texture/Texture.hpp
    main.cpp
    console.hpp
    stb_image.cpp
    gui.cpp
    gui.hpp
    mem_alloc.hpp
    mem_alloc.cpp
        renderer/RenderSystem.hpp
    CommandPool.hpp
    renderer/RenderBuffer.hpp
    resources/ResourceManager.hpp
    Buffer.hpp
        renderer/texture/Texture.hpp
    DescriptorPool.hpp
    Input.hpp
    GameWindow.hpp
    Clock.hpp
    Json.hpp
    Mouse.hpp
    Keyboard.hpp
    renderer/ModelRenderer.hpp
    renderer/ModelTransform.hpp
    VertexBuilder.hpp
    util/math/vec3.hpp
    util/math/vec2.hpp
    util/math/vec4.hpp
    util/math/vec.hpp
    renderer/Tessellator.hpp
    renderer/BlockTessellator.hpp
    util/math/AABB.hpp
    renderer/TextureUVCoordinateSet.hpp
    world/tile/Tile.hpp
    renderer/entity/AgentRenderer.hpp
    renderer/ModelGeometry.hpp
    renderer/ModelPart.hpp
    renderer/ModelPartBox.hpp
    renderer/PositionTextureVertex.hpp
    renderer/TexturedQuad.hpp
    renderer/ModelBox.hpp
    renderer/RenderContext.hpp
    renderer/texture/TextureManager.hpp
    util/ResourceLocation.hpp
    resources/ResourcePack.hpp
    renderer/Material.hpp
    client/AppPlatform.hpp
    world/tile/Tile.cpp util/math/TilePos.hpp
    world/tile/AcaciaButtonTile.hpp
    world/tile/AcaciaButtonTile.cpp
    world/tile/AcaciaDoorTile.hpp
    world/tile/AcaciaDoorTile.cpp
    world/tile/AcaciaFenceGateTile.hpp
    world/tile/AcaciaFenceGateTile.cpp
    world/tile/AcaciaPressurePlateTile.hpp
    world/tile/AcaciaPressurePlateTile.cpp
    world/tile/AcaciaStairsTile.hpp
    world/tile/AcaciaStairsTile.cpp
    world/tile/AcaciaStandingSignTile.hpp
    world/tile/AcaciaStandingSignTile.cpp
    world/tile/AcaciaTrapdoorTile.hpp
    world/tile/AcaciaTrapdoorTile.cpp
    world/tile/AcaciaWallSignTile.hpp
    world/tile/AcaciaWallSignTile.cpp
    world/tile/ActivatorRailTile.hpp
    world/tile/ActivatorRailTile.cpp
    world/tile/AirTile.hpp
    world/tile/AirTile.cpp
    world/tile/AllowTile.hpp
    world/tile/AllowTile.cpp
    world/tile/AndesiteStairsTile.hpp
    world/tile/AndesiteStairsTile.cpp
    world/tile/AnvilTile.hpp
    world/tile/AnvilTile.cpp
    world/tile/BambooSaplingTile.hpp
    world/tile/BambooSaplingTile.cpp
    world/tile/BambooTile.hpp
    world/tile/BambooTile.cpp
    world/tile/BarrelTile.hpp
    world/tile/BarrelTile.cpp
    world/tile/BarrierTile.hpp
    world/tile/BarrierTile.cpp
    world/tile/BeaconTile.hpp
    world/tile/BeaconTile.cpp
    world/tile/BedrockTile.hpp
    world/tile/BedrockTile.cpp
    world/tile/BedTile.hpp
    world/tile/BedTile.cpp
    world/tile/BeetrootTile.hpp
    world/tile/BeetrootTile.cpp
    world/tile/BellTile.hpp
    world/tile/BellTile.cpp
    world/tile/BirchButtonTile.hpp
    world/tile/BirchButtonTile.cpp
    world/tile/BirchDoorTile.hpp
    world/tile/BirchDoorTile.cpp
    world/tile/BirchFenceGateTile.hpp
    world/tile/BirchFenceGateTile.cpp
    world/tile/BirchPressurePlateTile.hpp
    world/tile/BirchPressurePlateTile.cpp
    world/tile/BirchStairsTile.hpp
    world/tile/BirchStairsTile.cpp
    world/tile/BirchStandingSignTile.hpp
    world/tile/BirchStandingSignTile.cpp
    world/tile/BirchTrapdoorTile.hpp
    world/tile/BirchTrapdoorTile.cpp
    world/tile/BirchWallSignTile.hpp
    world/tile/BirchWallSignTile.cpp
    world/tile/BlackGlazedTerracottaTile.hpp
    world/tile/BlackGlazedTerracottaTile.cpp
    world/tile/BlastFurnaceTile.hpp
    world/tile/BlastFurnaceTile.cpp
    world/tile/BlueGlazedTerracottaTile.hpp
    world/tile/BlueGlazedTerracottaTile.cpp
    world/tile/BlueIceTile.hpp
    world/tile/BlueIceTile.cpp
    world/tile/BoneBlockTile.hpp
    world/tile/BoneBlockTile.cpp
    world/tile/BookshelfTile.hpp
    world/tile/BookshelfTile.cpp
    world/tile/BorderBlockTile.hpp
    world/tile/BorderBlockTile.cpp
    world/tile/BrewingStandTile.hpp
    world/tile/BrewingStandTile.cpp
    world/tile/BrickBlockTile.hpp
    world/tile/BrickBlockTile.cpp
    world/tile/BrickStairsTile.hpp
    world/tile/BrickStairsTile.cpp
    world/tile/BrownGlazedTerracottaTile.hpp
    world/tile/BrownGlazedTerracottaTile.cpp
    world/tile/BrownMushroomBlockTile.hpp
    world/tile/BrownMushroomBlockTile.cpp
    world/tile/BrownMushroomTile.hpp
    world/tile/BrownMushroomTile.cpp
    world/tile/BubbleColumnTile.hpp
    world/tile/BubbleColumnTile.cpp
    world/tile/CactusTile.hpp
    world/tile/CactusTile.cpp
    world/tile/CakeTile.hpp
    world/tile/CakeTile.cpp
    world/tile/CameraTile.hpp
    world/tile/CameraTile.cpp
    world/tile/CampfireTile.hpp
    world/tile/CampfireTile.cpp
    world/tile/CarpetTile.hpp
    world/tile/CarpetTile.cpp
    world/tile/CarrotsTile.hpp
    world/tile/CarrotsTile.cpp
    world/tile/CartographyTableTile.hpp
    world/tile/CartographyTableTile.cpp
    world/tile/CarvedPumpkinTile.hpp
    world/tile/CarvedPumpkinTile.cpp
    world/tile/CauldronTile.hpp
    world/tile/CauldronTile.cpp
    world/tile/ChainCommandBlockTile.hpp
    world/tile/ChainCommandBlockTile.cpp
    world/tile/ChestTile.hpp
    world/tile/ChestTile.cpp
    world/tile/ChorusFlowerTile.hpp
    world/tile/ChorusFlowerTile.cpp
    world/tile/ChorusPlantTile.hpp
    world/tile/ChorusPlantTile.cpp
    world/tile/ClayTile.hpp
    world/tile/ClayTile.cpp
    world/tile/CoalBlockTile.hpp
    world/tile/CoalBlockTile.cpp
    world/tile/CoalOreTile.hpp
    world/tile/CoalOreTile.cpp
    world/tile/CobblestoneTile.hpp
    world/tile/CobblestoneTile.cpp
    world/tile/CobblestoneWallTile.hpp
    world/tile/CobblestoneWallTile.cpp
    world/tile/CocoaTile.hpp
    world/tile/CocoaTile.cpp
    world/tile/CommandBlockTile.hpp
    world/tile/CommandBlockTile.cpp
    world/tile/ComposterTile.hpp
    world/tile/ComposterTile.cpp
    world/tile/ConcretepowderTile.hpp
    world/tile/ConcretepowderTile.cpp
    world/tile/ConcreteTile.hpp
    world/tile/ConcreteTile.cpp
    world/tile/ConduitTile.hpp
    world/tile/ConduitTile.cpp
    world/tile/CoralBlockTile.hpp
    world/tile/CoralBlockTile.cpp
    world/tile/CoralFanDeadTile.hpp
    world/tile/CoralFanDeadTile.cpp
    world/tile/CoralFanHang2Tile.hpp
    world/tile/CoralFanHang2Tile.cpp
    world/tile/CoralFanHang3Tile.hpp
    world/tile/CoralFanHang3Tile.cpp
    world/tile/CoralFanHangTile.hpp
    world/tile/CoralFanHangTile.cpp
    world/tile/CoralFanTile.hpp
    world/tile/CoralFanTile.cpp
    world/tile/CoralTile.hpp
    world/tile/CoralTile.cpp
    world/tile/CraftingTableTile.hpp
    world/tile/CraftingTableTile.cpp
    world/tile/CyanGlazedTerracottaTile.hpp
    world/tile/CyanGlazedTerracottaTile.cpp
    world/tile/DarkOakButtonTile.hpp
    world/tile/DarkOakButtonTile.cpp
    world/tile/DarkOakDoorTile.hpp
    world/tile/DarkOakDoorTile.cpp
    world/tile/DarkOakFenceGateTile.hpp
    world/tile/DarkOakFenceGateTile.cpp
    world/tile/DarkOakPressurePlateTile.hpp
    world/tile/DarkOakPressurePlateTile.cpp
    world/tile/DarkOakStairsTile.hpp
    world/tile/DarkOakStairsTile.cpp
    world/tile/DarkoakStandingSignTile.hpp
    world/tile/DarkoakStandingSignTile.cpp
    world/tile/DarkOakTrapdoorTile.hpp
    world/tile/DarkOakTrapdoorTile.cpp
    world/tile/DarkoakWallSignTile.hpp
    world/tile/DarkoakWallSignTile.cpp
    world/tile/DarkPrismarineStairsTile.hpp
    world/tile/DarkPrismarineStairsTile.cpp
    world/tile/DaylightDetectorInvertedTile.hpp
    world/tile/DaylightDetectorInvertedTile.cpp
    world/tile/DaylightDetectorTile.hpp
    world/tile/DaylightDetectorTile.cpp
    world/tile/DeadbushTile.hpp
    world/tile/DeadbushTile.cpp
    world/tile/DenyTile.hpp
    world/tile/DenyTile.cpp
    world/tile/DetectorRailTile.hpp
    world/tile/DetectorRailTile.cpp
    world/tile/DiamondBlockTile.hpp
    world/tile/DiamondBlockTile.cpp
    world/tile/DiamondOreTile.hpp
    world/tile/DiamondOreTile.cpp
    world/tile/DioriteStairsTile.hpp
    world/tile/DioriteStairsTile.cpp
    world/tile/DirtTile.hpp
    world/tile/DirtTile.cpp
    world/tile/DispenserTile.hpp
    world/tile/DispenserTile.cpp
    world/tile/DoublePlantTile.hpp
    world/tile/DoublePlantTile.cpp
    world/tile/DoubleStoneSlab2Tile.hpp
    world/tile/DoubleStoneSlab2Tile.cpp
    world/tile/DoubleStoneSlab3Tile.hpp
    world/tile/DoubleStoneSlab3Tile.cpp
    world/tile/DoubleStoneSlab4Tile.hpp
    world/tile/DoubleStoneSlab4Tile.cpp
    world/tile/DoubleStoneSlabTile.hpp
    world/tile/DoubleStoneSlabTile.cpp
    world/tile/DoubleWoodenSlabTile.hpp
    world/tile/DoubleWoodenSlabTile.cpp
    world/tile/DragonEggTile.hpp
    world/tile/DragonEggTile.cpp
    world/tile/DriedKelpBlockTile.hpp
    world/tile/DriedKelpBlockTile.cpp
    world/tile/DropperTile.hpp
    world/tile/DropperTile.cpp
    world/tile/EmeraldBlockTile.hpp
    world/tile/EmeraldBlockTile.cpp
    world/tile/EmeraldOreTile.hpp
    world/tile/EmeraldOreTile.cpp
    world/tile/EnchantingTableTile.hpp
    world/tile/EnchantingTableTile.cpp
    world/tile/EndBrickStairsTile.hpp
    world/tile/EndBrickStairsTile.cpp
    world/tile/EndBricksTile.hpp
    world/tile/EndBricksTile.cpp
    world/tile/EnderChestTile.hpp
    world/tile/EnderChestTile.cpp
    world/tile/EndGatewayTile.hpp
    world/tile/EndGatewayTile.cpp
    world/tile/EndPortalFrameTile.hpp
    world/tile/EndPortalFrameTile.cpp
    world/tile/EndPortalTile.hpp
    world/tile/EndPortalTile.cpp
    world/tile/EndRodTile.hpp
    world/tile/EndRodTile.cpp
    world/tile/EndStoneTile.hpp
    world/tile/EndStoneTile.cpp
    world/tile/FarmlandTile.hpp
    world/tile/FarmlandTile.cpp
    world/tile/FenceGateTile.hpp
    world/tile/FenceGateTile.cpp
    world/tile/FenceTile.hpp
    world/tile/FenceTile.cpp
    world/tile/FireTile.hpp
    world/tile/FireTile.cpp
    world/tile/FletchingTableTile.hpp
    world/tile/FletchingTableTile.cpp
    world/tile/FlowerPotTile.hpp
    world/tile/FlowerPotTile.cpp
    world/tile/FlowingLavaTile.hpp
    world/tile/FlowingLavaTile.cpp
    world/tile/FlowingWaterTile.hpp
    world/tile/FlowingWaterTile.cpp
    world/tile/FormatVersionTile.hpp
    world/tile/FormatVersionTile.cpp
    world/tile/FrameTile.hpp
    world/tile/FrameTile.cpp
    world/tile/FrostedIceTile.hpp
    world/tile/FrostedIceTile.cpp
    world/tile/FurnaceTile.hpp
    world/tile/FurnaceTile.cpp
    world/tile/GlassPaneTile.hpp
    world/tile/GlassPaneTile.cpp
    world/tile/GlassTile.hpp
    world/tile/GlassTile.cpp
    world/tile/GlowingobsidianTile.hpp
    world/tile/GlowingobsidianTile.cpp
    world/tile/GlowstoneTile.hpp
    world/tile/GlowstoneTile.cpp
    world/tile/GoldBlockTile.hpp
    world/tile/GoldBlockTile.cpp
    world/tile/GoldenRailTile.hpp
    world/tile/GoldenRailTile.cpp
    world/tile/GoldOreTile.hpp
    world/tile/GoldOreTile.cpp
    world/tile/GraniteStairsTile.hpp
    world/tile/GraniteStairsTile.cpp
    world/tile/GrassPathTile.hpp
    world/tile/GrassPathTile.cpp
    world/tile/GrassTile.hpp
    world/tile/GrassTile.cpp
    world/tile/GravelTile.hpp
    world/tile/GravelTile.cpp
    world/tile/GrayGlazedTerracottaTile.hpp
    world/tile/GrayGlazedTerracottaTile.cpp
    world/tile/GreenGlazedTerracottaTile.hpp
    world/tile/GreenGlazedTerracottaTile.cpp
    world/tile/GrindstoneTile.hpp
    world/tile/GrindstoneTile.cpp
    world/tile/HardenedClayTile.hpp
    world/tile/HardenedClayTile.cpp
    world/tile/HayBlockTile.hpp
    world/tile/HayBlockTile.cpp
    world/tile/HeavyWeightedPressurePlateTile.hpp
    world/tile/HeavyWeightedPressurePlateTile.cpp
    world/tile/HopperTile.hpp
    world/tile/HopperTile.cpp
    world/tile/IceTile.hpp
    world/tile/IceTile.cpp
    world/tile/InfoUpdate2Tile.hpp
    world/tile/InfoUpdate2Tile.cpp
    world/tile/InfoUpdateTile.hpp
    world/tile/InfoUpdateTile.cpp
    world/tile/InvisiblebedrockTile.hpp
    world/tile/InvisiblebedrockTile.cpp
    world/tile/IronBarsTile.hpp
    world/tile/IronBarsTile.cpp
    world/tile/IronBlockTile.hpp
    world/tile/IronBlockTile.cpp
    world/tile/IronDoorTile.hpp
    world/tile/IronDoorTile.cpp
    world/tile/IronOreTile.hpp
    world/tile/IronOreTile.cpp
    world/tile/IronTrapdoorTile.hpp
    world/tile/IronTrapdoorTile.cpp
    world/tile/JigsawTile.hpp
    world/tile/JigsawTile.cpp
    world/tile/JukeboxTile.hpp
    world/tile/JukeboxTile.cpp
    world/tile/JungleButtonTile.hpp
    world/tile/JungleButtonTile.cpp
    world/tile/JungleDoorTile.hpp
    world/tile/JungleDoorTile.cpp
    world/tile/JungleFenceGateTile.hpp
    world/tile/JungleFenceGateTile.cpp
    world/tile/JunglePressurePlateTile.hpp
    world/tile/JunglePressurePlateTile.cpp
    world/tile/JungleStairsTile.hpp
    world/tile/JungleStairsTile.cpp
    world/tile/JungleStandingSignTile.hpp
    world/tile/JungleStandingSignTile.cpp
    world/tile/JungleTrapdoorTile.hpp
    world/tile/JungleTrapdoorTile.cpp
    world/tile/JungleWallSignTile.hpp
    world/tile/JungleWallSignTile.cpp
    world/tile/KelpTile.hpp
    world/tile/KelpTile.cpp
    world/tile/LadderTile.hpp
    world/tile/LadderTile.cpp
    world/tile/LanternTile.hpp
    world/tile/LanternTile.cpp
    world/tile/LapisBlockTile.hpp
    world/tile/LapisBlockTile.cpp
    world/tile/LapisOreTile.hpp
    world/tile/LapisOreTile.cpp
    world/tile/LavaCauldronTile.hpp
    world/tile/LavaCauldronTile.cpp
    world/tile/LavaTile.hpp
    world/tile/LavaTile.cpp
    world/tile/Leaves2Tile.hpp
    world/tile/Leaves2Tile.cpp
    world/tile/LeavesTile.hpp
    world/tile/LeavesTile.cpp
    world/tile/LecternTile.hpp
    world/tile/LecternTile.cpp
    world/tile/LeverTile.hpp
    world/tile/LeverTile.cpp
    world/tile/LightBlockTile.hpp
    world/tile/LightBlockTile.cpp
    world/tile/LightBlueGlazedTerracottaTile.hpp
    world/tile/LightBlueGlazedTerracottaTile.cpp
    world/tile/LightWeightedPressurePlateTile.hpp
    world/tile/LightWeightedPressurePlateTile.cpp
    world/tile/LimeGlazedTerracottaTile.hpp
    world/tile/LimeGlazedTerracottaTile.cpp
    world/tile/LitBlastFurnaceTile.hpp
    world/tile/LitBlastFurnaceTile.cpp
    world/tile/LitFurnaceTile.hpp
    world/tile/LitFurnaceTile.cpp
    world/tile/LitPumpkinTile.hpp
    world/tile/LitPumpkinTile.cpp
    world/tile/LitRedstoneLampTile.hpp
    world/tile/LitRedstoneLampTile.cpp
    world/tile/LitRedstoneOreTile.hpp
    world/tile/LitRedstoneOreTile.cpp
    world/tile/LitSmokerTile.hpp
    world/tile/LitSmokerTile.cpp
    world/tile/Log2Tile.hpp
    world/tile/Log2Tile.cpp
    world/tile/LogTile.hpp
    world/tile/LogTile.cpp
    world/tile/LoomTile.hpp
    world/tile/LoomTile.cpp
    world/tile/MagentaGlazedTerracottaTile.hpp
    world/tile/MagentaGlazedTerracottaTile.cpp
    world/tile/MagmaTile.hpp
    world/tile/MagmaTile.cpp
    world/tile/MelonBlockTile.hpp
    world/tile/MelonBlockTile.cpp
    world/tile/MelonStemTile.hpp
    world/tile/MelonStemTile.cpp
    world/tile/MobSpawnerTile.hpp
    world/tile/MobSpawnerTile.cpp
    world/tile/MonsterEggTile.hpp
    world/tile/MonsterEggTile.cpp
    world/tile/MossyCobblestoneStairsTile.hpp
    world/tile/MossyCobblestoneStairsTile.cpp
    world/tile/MossyCobblestoneTile.hpp
    world/tile/MossyCobblestoneTile.cpp
    world/tile/MossyStoneBrickStairsTile.hpp
    world/tile/MossyStoneBrickStairsTile.cpp
    world/tile/MovingblockTile.hpp
    world/tile/MovingblockTile.cpp
    world/tile/MyceliumTile.hpp
    world/tile/MyceliumTile.cpp
    world/tile/NetherBrickFenceTile.hpp
    world/tile/NetherBrickFenceTile.cpp
    world/tile/NetherBrickStairsTile.hpp
    world/tile/NetherBrickStairsTile.cpp
    world/tile/NetherBrickTile.hpp
    world/tile/NetherBrickTile.cpp
    world/tile/NetherrackTile.hpp
    world/tile/NetherrackTile.cpp
    world/tile/NetherreactorTile.hpp
    world/tile/NetherreactorTile.cpp
    world/tile/NetherWartBlockTile.hpp
    world/tile/NetherWartBlockTile.cpp
    world/tile/NetherWartTile.hpp
    world/tile/NetherWartTile.cpp
    world/tile/NormalStoneStairsTile.hpp
    world/tile/NormalStoneStairsTile.cpp
    world/tile/NoteblockTile.hpp
    world/tile/NoteblockTile.cpp
    world/tile/OakStairsTile.hpp
    world/tile/OakStairsTile.cpp
    world/tile/ObserverTile.hpp
    world/tile/ObserverTile.cpp
    world/tile/ObsidianTile.hpp
    world/tile/ObsidianTile.cpp
    world/tile/OrangeGlazedTerracottaTile.hpp
    world/tile/OrangeGlazedTerracottaTile.cpp
    world/tile/PackedIceTile.hpp
    world/tile/PackedIceTile.cpp
    world/tile/PinkGlazedTerracottaTile.hpp
    world/tile/PinkGlazedTerracottaTile.cpp
    world/tile/PistonarmcollisionTile.hpp
    world/tile/PistonarmcollisionTile.cpp
    world/tile/PistonTile.hpp
    world/tile/PistonTile.cpp
    world/tile/PlanksTile.hpp
    world/tile/PlanksTile.cpp
    world/tile/PodzolTile.hpp
    world/tile/PodzolTile.cpp
    world/tile/PolishedAndesiteStairsTile.hpp
    world/tile/PolishedAndesiteStairsTile.cpp
    world/tile/PolishedDioriteStairsTile.hpp
    world/tile/PolishedDioriteStairsTile.cpp
    world/tile/PolishedGraniteStairsTile.hpp
    world/tile/PolishedGraniteStairsTile.cpp
    world/tile/PortalTile.hpp
    world/tile/PortalTile.cpp
    world/tile/PotatoesTile.hpp
    world/tile/PotatoesTile.cpp
    world/tile/PoweredComparatorTile.hpp
    world/tile/PoweredComparatorTile.cpp
    world/tile/PoweredRepeaterTile.hpp
    world/tile/PoweredRepeaterTile.cpp
    world/tile/PrismarineBricksStairsTile.hpp
    world/tile/PrismarineBricksStairsTile.cpp
    world/tile/PrismarineStairsTile.hpp
    world/tile/PrismarineStairsTile.cpp
    world/tile/PrismarineTile.hpp
    world/tile/PrismarineTile.cpp
    world/tile/PumpkinStemTile.hpp
    world/tile/PumpkinStemTile.cpp
    world/tile/PumpkinTile.hpp
    world/tile/PumpkinTile.cpp
    world/tile/PurpleGlazedTerracottaTile.hpp
    world/tile/PurpleGlazedTerracottaTile.cpp
    world/tile/PurpurBlockTile.hpp
    world/tile/PurpurBlockTile.cpp
    world/tile/PurpurStairsTile.hpp
    world/tile/PurpurStairsTile.cpp
    world/tile/QuartzBlockTile.hpp
    world/tile/QuartzBlockTile.cpp
    world/tile/QuartzOreTile.hpp
    world/tile/QuartzOreTile.cpp
    world/tile/QuartzStairsTile.hpp
    world/tile/QuartzStairsTile.cpp
    world/tile/RailTile.hpp
    world/tile/RailTile.cpp
    world/tile/RedFlowerTile.hpp
    world/tile/RedFlowerTile.cpp
    world/tile/RedGlazedTerracottaTile.hpp
    world/tile/RedGlazedTerracottaTile.cpp
    world/tile/RedMushroomBlockTile.hpp
    world/tile/RedMushroomBlockTile.cpp
    world/tile/RedMushroomTile.hpp
    world/tile/RedMushroomTile.cpp
    world/tile/RedNetherBrickStairsTile.hpp
    world/tile/RedNetherBrickStairsTile.cpp
    world/tile/RedNetherBrickTile.hpp
    world/tile/RedNetherBrickTile.cpp
    world/tile/RedSandstoneStairsTile.hpp
    world/tile/RedSandstoneStairsTile.cpp
    world/tile/RedSandstoneTile.hpp
    world/tile/RedSandstoneTile.cpp
    world/tile/RedstoneBlockTile.hpp
    world/tile/RedstoneBlockTile.cpp
    world/tile/RedstoneLampTile.hpp
    world/tile/RedstoneLampTile.cpp
    world/tile/RedstoneOreTile.hpp
    world/tile/RedstoneOreTile.cpp
    world/tile/RedstoneTorchTile.hpp
    world/tile/RedstoneTorchTile.cpp
    world/tile/RedstoneWireTile.hpp
    world/tile/RedstoneWireTile.cpp
    world/tile/ReedsTile.hpp
    world/tile/ReedsTile.cpp
    world/tile/RepeatingCommandBlockTile.hpp
    world/tile/RepeatingCommandBlockTile.cpp
    world/tile/Reserved6Tile.hpp
    world/tile/Reserved6Tile.cpp
    world/tile/SandstoneStairsTile.hpp
    world/tile/SandstoneStairsTile.cpp
    world/tile/SandstoneTile.hpp
    world/tile/SandstoneTile.cpp
    world/tile/SandTile.hpp
    world/tile/SandTile.cpp
    world/tile/SaplingTile.hpp
    world/tile/SaplingTile.cpp
    world/tile/ScaffoldingTile.hpp
    world/tile/ScaffoldingTile.cpp
    world/tile/SeagrassTile.hpp
    world/tile/SeagrassTile.cpp
    world/tile/SealanternTile.hpp
    world/tile/SealanternTile.cpp
    world/tile/SeaPickleTile.hpp
    world/tile/SeaPickleTile.cpp
    world/tile/ShulkerBoxTile.hpp
    world/tile/ShulkerBoxTile.cpp
    world/tile/SilverGlazedTerracottaTile.hpp
    world/tile/SilverGlazedTerracottaTile.cpp
    world/tile/SkullTile.hpp
    world/tile/SkullTile.cpp
    world/tile/SlimeTile.hpp
    world/tile/SlimeTile.cpp
    world/tile/SmithingTableTile.hpp
    world/tile/SmithingTableTile.cpp
    world/tile/SmokerTile.hpp
    world/tile/SmokerTile.cpp
    world/tile/SmoothQuartzStairsTile.hpp
    world/tile/SmoothQuartzStairsTile.cpp
    world/tile/SmoothRedSandstoneStairsTile.hpp
    world/tile/SmoothRedSandstoneStairsTile.cpp
    world/tile/SmoothSandstoneStairsTile.hpp
    world/tile/SmoothSandstoneStairsTile.cpp
    world/tile/SmoothStoneTile.hpp
    world/tile/SmoothStoneTile.cpp
    world/tile/SnowLayerTile.hpp
    world/tile/SnowLayerTile.cpp
    world/tile/SnowTile.hpp
    world/tile/SnowTile.cpp
    world/tile/SoulSandTile.hpp
    world/tile/SoulSandTile.cpp
    world/tile/SpongeTile.hpp
    world/tile/SpongeTile.cpp
    world/tile/SpruceButtonTile.hpp
    world/tile/SpruceButtonTile.cpp
    world/tile/SpruceDoorTile.hpp
    world/tile/SpruceDoorTile.cpp
    world/tile/SpruceFenceGateTile.hpp
    world/tile/SpruceFenceGateTile.cpp
    world/tile/SprucePressurePlateTile.hpp
    world/tile/SprucePressurePlateTile.cpp
    world/tile/SpruceStairsTile.hpp
    world/tile/SpruceStairsTile.cpp
    world/tile/SpruceStandingSignTile.hpp
    world/tile/SpruceStandingSignTile.cpp
    world/tile/SpruceTrapdoorTile.hpp
    world/tile/SpruceTrapdoorTile.cpp
    world/tile/SpruceWallSignTile.hpp
    world/tile/SpruceWallSignTile.cpp
    world/tile/StainedGlassPaneTile.hpp
    world/tile/StainedGlassPaneTile.cpp
    world/tile/StainedGlassTile.hpp
    world/tile/StainedGlassTile.cpp
    world/tile/StainedHardenedClayTile.hpp
    world/tile/StainedHardenedClayTile.cpp
    world/tile/StandingBannerTile.hpp
    world/tile/StandingBannerTile.cpp
    world/tile/StandingSignTile.hpp
    world/tile/StandingSignTile.cpp
    world/tile/StickypistonarmcollisionTile.hpp
    world/tile/StickypistonarmcollisionTile.cpp
    world/tile/StickyPistonTile.hpp
    world/tile/StickyPistonTile.cpp
    world/tile/StoneBrickStairsTile.hpp
    world/tile/StoneBrickStairsTile.cpp
    world/tile/StonebrickTile.hpp
    world/tile/StonebrickTile.cpp
    world/tile/StoneButtonTile.hpp
    world/tile/StoneButtonTile.cpp
    world/tile/StonecutterBlockTile.hpp
    world/tile/StonecutterBlockTile.cpp
    world/tile/StonecutterTile.hpp
    world/tile/StonecutterTile.cpp
    world/tile/StonePressurePlateTile.hpp
    world/tile/StonePressurePlateTile.cpp
    world/tile/StoneSlab2Tile.hpp
    world/tile/StoneSlab2Tile.cpp
    world/tile/StoneSlab3Tile.hpp
    world/tile/StoneSlab3Tile.cpp
    world/tile/StoneSlab4Tile.hpp
    world/tile/StoneSlab4Tile.cpp
    world/tile/StoneSlabTile.hpp
    world/tile/StoneSlabTile.cpp
    world/tile/StoneStairsTile.hpp
    world/tile/StoneStairsTile.cpp
    world/tile/StoneTile.hpp
    world/tile/StoneTile.cpp
    world/tile/StrippedAcaciaLogTile.hpp
    world/tile/StrippedAcaciaLogTile.cpp
    world/tile/StrippedBirchLogTile.hpp
    world/tile/StrippedBirchLogTile.cpp
    world/tile/StrippedDarkOakLogTile.hpp
    world/tile/StrippedDarkOakLogTile.cpp
    world/tile/StrippedJungleLogTile.hpp
    world/tile/StrippedJungleLogTile.cpp
    world/tile/StrippedOakLogTile.hpp
    world/tile/StrippedOakLogTile.cpp
    world/tile/StrippedSpruceLogTile.hpp
    world/tile/StrippedSpruceLogTile.cpp
    world/tile/StructureBlockTile.hpp
    world/tile/StructureBlockTile.cpp
    world/tile/StructureVoidTile.hpp
    world/tile/StructureVoidTile.cpp
    world/tile/SweetBerryBushTile.hpp
    world/tile/SweetBerryBushTile.cpp
    world/tile/TallgrassTile.hpp
    world/tile/TallgrassTile.cpp
    world/tile/TntTile.hpp
    world/tile/TntTile.cpp
    world/tile/TorchTile.hpp
    world/tile/TorchTile.cpp
    world/tile/TrapdoorTile.hpp
    world/tile/TrapdoorTile.cpp
    world/tile/TrappedChestTile.hpp
    world/tile/TrappedChestTile.cpp
    world/tile/TripwireHookTile.hpp
    world/tile/TripwireHookTile.cpp
    world/tile/TripwireTile.hpp
    world/tile/TripwireTile.cpp
    world/tile/TurtleEggTile.hpp
    world/tile/TurtleEggTile.cpp
    world/tile/UndyedShulkerBoxTile.hpp
    world/tile/UndyedShulkerBoxTile.cpp
    world/tile/UnlitRedstoneTorchTile.hpp
    world/tile/UnlitRedstoneTorchTile.cpp
    world/tile/UnpoweredComparatorTile.hpp
    world/tile/UnpoweredComparatorTile.cpp
    world/tile/UnpoweredRepeaterTile.hpp
    world/tile/UnpoweredRepeaterTile.cpp
    world/tile/VineTile.hpp
    world/tile/VineTile.cpp
    world/tile/WallBannerTile.hpp
    world/tile/WallBannerTile.cpp
    world/tile/WallSignTile.hpp
    world/tile/WallSignTile.cpp
    world/tile/WaterlilyTile.hpp
    world/tile/WaterlilyTile.cpp
    world/tile/WaterTile.hpp
    world/tile/WaterTile.cpp
    world/tile/WebTile.hpp
    world/tile/WebTile.cpp
    world/tile/WheatTile.hpp
    world/tile/WheatTile.cpp
    world/tile/WhiteGlazedTerracottaTile.hpp
    world/tile/WhiteGlazedTerracottaTile.cpp
    world/tile/WitherRoseTile.hpp
    world/tile/WitherRoseTile.cpp
    world/tile/WoodenButtonTile.hpp
    world/tile/WoodenButtonTile.cpp
    world/tile/WoodenDoorTile.hpp
    world/tile/WoodenDoorTile.cpp
    world/tile/WoodenPressurePlateTile.hpp
    world/tile/WoodenPressurePlateTile.cpp
    world/tile/WoodenSlabTile.hpp
    world/tile/WoodenSlabTile.cpp
    world/tile/WoodTile.hpp
    world/tile/WoodTile.cpp
    world/tile/WoolTile.hpp
    world/tile/WoolTile.cpp
    world/tile/YellowFlowerTile.hpp
    world/tile/YellowFlowerTile.cpp
    world/tile/YellowGlazedTerracottaTile.hpp
    world/tile/YellowGlazedTerracottaTile.cpp
        util/math/Rect2D.hpp renderer/texture/TextureAtlas.hpp renderer/texture/NativeImage.hpp renderer/RenderMaterial.hpp renderer/RenderSystem.cpp renderer/RenderContext.cpp)

target_compile_definitions(vcraft PUBLIC
    "-DGLFW_INCLUDE_NONE"
    "-DGLFW_INCLUDE_VULKAN"
    "-DGLM_FORCE_DEPTH_ZERO_TO_ONE"

    "-DVULKAN_HPP_DISABLE_IMPLICIT_RESULT_VALUE_CAST"
    "-DVULKAN_HPP_NO_SMART_HANDLE"

    "-DVMA_STATIC_VULKAN_FUNCTIONS"
    "-DVULKAN_HPP_NO_STRUCT_CONSTRUCTORS"
)

target_link_libraries(vcraft glfw vulkan imgui)
add_dependencies(vcraft shaders)

execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_SOURCE_DIR}/assets ${CMAKE_BINARY_DIR}/assets)